fixes some spacing issues

--- a/wp-content/themes/theme/styles/modules/navigation.css
+++ b/wp-content/themes/theme/styles/modules/navigation.css
@@ -16,10 +16,9 @@ nav {
 	overflow-x: hidden;
 	-webkit-overflow-scrolling: touch;
 
-
 	& .inner {
 			background-color: #f8f8f8;
-			height: 100%;
+
 	}
 }
 
@@ -76,7 +75,7 @@ nav {
 	overflow-y: auto;
 	overflow-x: hidden;
 	-webkit-overflow-scrolling: touch;
-	height: 100%;
+	height: 100vh;
 
 	& ul {
 		padding: 0;
@@ -86,7 +85,7 @@ nav {
 		& li {
 			text-align: center;
 			position: relative;
-			padding: 15px 0;
+			padding: 12px 0;
 
 			&:hover {
 				color: var(--green);
@@ -142,8 +141,8 @@ nav {
 		color: var(--green);
 		display: inline-block;
 		position: absolute;
-		bottom: -20px;
-		left: 49%;
+		bottom: -12px;
+		left: 49.5%;
 	}
 
 }
@@ -185,5 +184,9 @@ nav {
 				}
 			}
 		}
+	}
+
+	.ds-caret::after {
+			bottom: -20px;
 	}
 }
